k8s_practice_yml/istio_conf/istio_gwt_class.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istiogwtclass
spec:
  controllerName: istio.io/gateway-controller
