k8s_practice_yml/istio_conf/curl-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: curl
        image: curlimages/curl
        command: ["sleep", "172800"]
