k8s_practice_yml/istio_conf/istio_gwt.yml
apiVersion: gateway.networking.k8s.io/v1aplha3
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  # selector:
  #   app: istio-gateway

  gatewayClassName: istiogwtclass
  listeners:
  - name: httplisteneristio
    hosts: 
    - "*"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All   # any namespace can reference this gateway
