k8s_practice_yml/istio_conf/istio-egress.yaml
# kubectl create secret generic kmbl-kgs-ca2 \
#   -n mwf-services \
#   --from-file=ca.crt=kgs.crt
 
#  istio-egress-dest-rule.yaml
 
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: finacle-apis-tls
  namespace: istio-egress
spec:
  host: fincbsuat.kotak.int
  trafficPolicy:
    tls:
      mode: SIMPLE
      credentialName: kmbl-kgs-ca2
      sni: fincbsuat.kotak.int
 
---
 
# cat sidecar-app-pod-vs.yaml
 
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: finacle-api-envoy-vs
  namespace: mwf-services
spec:
  hosts:
  - fincbsuat.kotak.int
  gateways:
  - mesh
  tls:
  - match:
    - port: 8091
      sniHosts:
       - fincbsuat.kotak.int
    route:
    - destination:
        host: mwf-egress-gateway.istio-egress.svc.cluster.local
        port:
          number: 8091
 
---
 
# istio-egress namespace virtual service
 
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: finacle-api-gateway-vs
  namespace: istio-egress
spec:
  gateways:
  - mwf-egress-gateway
  hosts:
  - fincbsuat.kotak.int
  http:
  - match:
    - port: 8091
    route:
    - destination:
        host: fincbsuat.kotak.int
        port:
          number: 8091
 
---
# cat sidecar-service-entry.yaml
 
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: finacle-apis
  namespace: mwf-services
spec:
  hosts:
  - fincbsuat.kotak.int
  ports:
  - number: 8091
    name: http-8091
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
