k8s_practice_yml/istio_conf/istio_http_rule.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: review-route
  namespace: test
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system

  hostnames: ["review.refactorq.com"]

  rules:
  # - matches:
  #   - path:
  #       type: PathPrefix
  #       value: /get

    - backendRefs:
      - name: hotstarsvc
        port: 8081

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: default-route
  namespace: test

spec:
  parentRefs:
  - name: gateway
    namespace: istio-system

  # hostnames: ['*']

  rules:
  - backendRefs:
    - name: hotstarsvc
      port: 8081
      # weight: 1
